--- a/Views/Interface/SuccessStoryAchievementsList.xaml
+++ b/Views/Interface/SuccessStoryAchievementsList.xaml
@@ -4,14 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SuccessStory.Views.Interface"
-             xmlns:localPlugin="clr-namespace:PluginCommon;assembly=PluginCommon"
-             xmlns:converters="clr-namespace:PluginCommon.PlayniteResources.Converters;assembly=PluginCommon"
+             xmlns:converters="clr-namespace:CommonPlaynite.Converters;assembly=CommonPlaynite"
+             xmlns:plugincommon="clr-namespace:PluginCommon;assembly=CommonControls"
              mc:Ignorable="d">
 
     <UserControl.Resources>
         <converters:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-        <localPlugin:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
+        <plugincommon:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
         <local:SetColorConverter x:Key="SetColorConverter" />
     </UserControl.Resources>
 
