--- a/Views/Interface/SuccessStoryButtonDetails.xaml
+++ b/Views/Interface/SuccessStoryButtonDetails.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d" MinWidth="150" Height="40">
 
     <Button.Resources>
-        <FontFamily x:Key="font">pack://application:,,,/PluginCommon;component/Resources/font.ttf#font</FontFamily>
+        <FontFamily x:Key="font">pack://application:,,,/CommonControls;component/Resources/font.ttf#font</FontFamily>
     </Button.Resources>
 
     <Button.Style>
