--- a/Views/SuccessStorySettingsView.xaml
+++ b/Views/SuccessStorySettingsView.xaml
@@ -44,13 +44,15 @@
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="35" />
                                 <RowDefinition Height="35" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="35" />
                                 <RowDefinition Height="35" />
                                 <RowDefinition Height="35" />
                                 <RowDefinition Height="35" />
                                 <RowDefinition Height="auto" />
                                 <RowDefinition Height="35" />
-                                <RowDefinition Height="auto" />
                                 <RowDefinition Height="35" />
+                                <RowDefinition Height="auto" />
                             </Grid.RowDefinitions>
 
                             <CheckBox Grid.Column="0" Grid.Row="0" IsChecked="{Binding EnableSteam}" VerticalAlignment="Center">
@@ -60,36 +62,50 @@
                             <Button Grid.Column="4" Grid.Row="0" Height="30" Content="" FontFamily="{StaticResource font}" Click="Button_Click_Get_Steam" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
                             <Button Grid.Column="6" Grid.Row="0" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Click="Button_Click_Steam" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
 
-                            <CheckBox Grid.Column="0" Grid.Row="1" IsChecked="{Binding EnableGog}" VerticalAlignment="Center">
+                            <Grid Grid.Column="0" Grid.ColumnSpan="7" Grid.Row="1" IsEnabled="{Binding EnableSteam}">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="50" />
+                                    <ColumnDefinition Width="auto" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="35" />
+                                </Grid.RowDefinitions>
+
+                                <CheckBox Grid.Column="1" IsChecked="{Binding EnableSteamWithoutWebApi}" VerticalAlignment="Center">
+                                    <Label Content="{DynamicResource LOCSuccessStorySteamNoApi}" />
+                                </CheckBox>
+                            </Grid>
+                            
+                            <CheckBox Grid.Column="0" Grid.Row="3" IsChecked="{Binding EnableGog}" VerticalAlignment="Center">
                                 <Label Content="{DynamicResource LOCSuccessStoryEnableGog}"></Label>
                             </CheckBox>
-                            <Label Grid.Column="2" Grid.Row="1" x:Name="GogLoad" HorizontalAlignment="Center">xxx / xxx</Label>
-                            <Button Grid.Column="4" Grid.Row="1" Height="30" Content="" FontFamily="{StaticResource font}" Click="Button_Click_Get_Gog" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
-                            <Button Grid.Column="6" Grid.Row="1" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Click="Button_Click_Gog" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
+                            <Label Grid.Column="2" Grid.Row="3" x:Name="GogLoad" HorizontalAlignment="Center">xxx / xxx</Label>
+                            <Button Grid.Column="4" Grid.Row="3" Height="30" Content="" FontFamily="{StaticResource font}" Click="Button_Click_Get_Gog" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
+                            <Button Grid.Column="6" Grid.Row="3" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Click="Button_Click_Gog" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
 
-                            <CheckBox Grid.Column="0" Grid.Row="2" IsChecked="{Binding EnableOrigin}" VerticalAlignment="Center">
+                            <CheckBox Grid.Column="0" Grid.Row="4" IsChecked="{Binding EnableOrigin}" VerticalAlignment="Center">
                                 <Label Content="{DynamicResource LOCSuccessStoryEnableOrigin}"></Label>
                             </CheckBox>
-                            <Label Grid.Column="2" Grid.Row="2" x:Name="OriginLoad" HorizontalAlignment="Center">xxx / xxx</Label>
-                            <Button Grid.Column="4" Grid.Row="2" Height="30" Content="" FontFamily="{StaticResource font}" Click="Button_Click_Get_Origin" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
-                            <Button Grid.Column="6" Grid.Row="2" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Click="Button_Click_Origin" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
+                            <Label Grid.Column="2" Grid.Row="4" x:Name="OriginLoad" HorizontalAlignment="Center">xxx / xxx</Label>
+                            <Button Grid.Column="4" Grid.Row="4" Height="30" Content="" FontFamily="{StaticResource font}" Click="Button_Click_Get_Origin" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
+                            <Button Grid.Column="6" Grid.Row="4" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Click="Button_Click_Origin" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
 
-                            <CheckBox Grid.Column="0" Grid.Row="3" IsChecked="{Binding EnableXbox}" VerticalAlignment="Center">
+                            <CheckBox Grid.Column="0" Grid.Row="5" IsChecked="{Binding EnableXbox}" VerticalAlignment="Center">
                                 <Label Content="{DynamicResource LOCSuccessStoryEnableXbox}"></Label>
                             </CheckBox>
-                            <Label Grid.Column="2" Grid.Row="3" x:Name="XboxLoad" HorizontalAlignment="Center">xxx / xxx</Label>
-                            <Button Grid.Column="4" Grid.Row="3" Height="30" Content="" FontFamily="{StaticResource font}" Click="Button_Click_Get_Xbox" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
-                            <Button Grid.Column="6" Grid.Row="3" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Click="Button_Click_Xbox" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
+                            <Label Grid.Column="2" Grid.Row="5" x:Name="XboxLoad" HorizontalAlignment="Center">xxx / xxx</Label>
+                            <Button Grid.Column="4" Grid.Row="5" Height="30" Content="" FontFamily="{StaticResource font}" Click="Button_Click_Get_Xbox" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
+                            <Button Grid.Column="6" Grid.Row="5" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Click="Button_Click_Xbox" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
 
 
-                            <CheckBox Grid.Column="0" Grid.Row="4" IsChecked="{Binding EnableRetroAchievements}" VerticalAlignment="Center">
+                            <CheckBox Grid.Column="0" Grid.Row="6" IsChecked="{Binding EnableRetroAchievements}" VerticalAlignment="Center">
                                 <Label Content="{DynamicResource LOCSuccessStoryEnableRetroAchievements}"></Label>
                             </CheckBox>
-                            <Label Grid.Column="2" Grid.Row="4" x:Name="RetroAchievementsLoad" HorizontalAlignment="Center">xxx / xxx</Label>
-                            <Button Grid.Column="4" Grid.Row="4" Height="30" Content="" FontFamily="{StaticResource font}" Click="Button_Click_Get_RetroAchievements" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
-                            <Button Grid.Column="6" Grid.Row="4" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Click="Button_Click_RetroAchievements" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
+                            <Label Grid.Column="2" Grid.Row="6" x:Name="RetroAchievementsLoad" HorizontalAlignment="Center">xxx / xxx</Label>
+                            <Button Grid.Column="4" Grid.Row="6" Height="30" Content="" FontFamily="{StaticResource font}" Click="Button_Click_Get_RetroAchievements" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
+                            <Button Grid.Column="6" Grid.Row="6" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Click="Button_Click_RetroAchievements" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
 
-                            <Grid Grid.Column="0" Grid.ColumnSpan="7" Grid.Row="5" IsEnabled="{Binding EnableRetroAchievements}">
+                            <Grid Grid.Column="0" Grid.ColumnSpan="7" Grid.Row="7" IsEnabled="{Binding EnableRetroAchievements}">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="50" />
                                     <ColumnDefinition Width="auto" />
@@ -116,16 +132,15 @@
                             </Grid>
 
 
-                            <CheckBox Grid.Column="0" Grid.Row="6" IsChecked="{Binding EnableRpcs3Achievements}" VerticalAlignment="Center">
+                            <CheckBox Grid.Column="0" Grid.Row="8" IsChecked="{Binding EnableRpcs3Achievements}" VerticalAlignment="Center">
                                 <Label Content="{DynamicResource LOCSuccessStoryEnableRpcs3Achievements}"></Label>
                             </CheckBox>
-                            <Label Grid.Column="2" Grid.Row="6" x:Name="Rpcs3Load" HorizontalAlignment="Center">xxx / xxx</Label>
-                            <Button Grid.Column="4" Grid.Row="6" Height="30" Content="" FontFamily="{StaticResource font}" Click="Button_Click_Get_Rpcs3" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
-                            <Button Grid.Column="6" Grid.Row="6" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Click="Button_Click_Rpcs3" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
+                            <Label Grid.Column="2" Grid.Row="8" x:Name="Rpcs3Load" HorizontalAlignment="Center">xxx / xxx</Label>
+                            <Button Grid.Column="4" Grid.Row="8" Height="30" Content="" FontFamily="{StaticResource font}" Click="Button_Click_Get_Rpcs3" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
+                            <Button Grid.Column="6" Grid.Row="8" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Click="Button_Click_Rpcs3" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
 
-                            <Grid Grid.Column="0" Grid.ColumnSpan="7" Grid.Row="7" IsEnabled="{Binding EnableRpcs3Achievements}">
+                            <Grid Grid.Column="0" Grid.ColumnSpan="7" Grid.Row="9" IsEnabled="{Binding EnableRpcs3Achievements}">
                                 <Grid.ColumnDefinitions>
-
                                     <ColumnDefinition Width="50" />
                                     <ColumnDefinition Width="auto" />
                                     <ColumnDefinition Width="10" />
@@ -143,12 +158,12 @@
                                         VerticalAlignment="Center" Grid.ColumnSpan="2" />
                             </Grid>
 
-                            <CheckBox Grid.Column="0" Grid.Row="8" IsChecked="{Binding EnableLocal}" Visibility="{Binding EnableLocal, Converter={StaticResource BooleanToVisibilityConverter}}" VerticalAlignment="Center">
+                            <CheckBox Grid.Column="0" Grid.Row="10" IsChecked="{Binding EnableLocal}" Visibility="{Binding EnableLocal, Converter={StaticResource BooleanToVisibilityConverter}}" VerticalAlignment="Center">
                                 <Label Content="Enable Local"></Label>
                             </CheckBox>
-                            <Label Grid.Column="2" Grid.Row="8" x:Name="LocalLoad" Visibility="{Binding EnableLocal, Converter={StaticResource BooleanToVisibilityConverter}}" HorizontalAlignment="Center">xxx / xxx</Label>
-                            <Button Grid.Column="4" Grid.Row="8" Height="30" Content="" FontFamily="{StaticResource font}" Visibility="{Binding EnableLocal, Converter={StaticResource BooleanToVisibilityConverter}}" Click="Button_Click_Get_Local" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
-                            <Button Grid.Column="6" Grid.Row="8" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Visibility="{Binding EnableLocal, Converter={StaticResource BooleanToVisibilityConverter}}" Click="Button_Click_Local" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
+                            <Label Grid.Column="2" Grid.Row="10" x:Name="LocalLoad" Visibility="{Binding EnableLocal, Converter={StaticResource BooleanToVisibilityConverter}}" HorizontalAlignment="Center">xxx / xxx</Label>
+                            <Button Grid.Column="4" Grid.Row="10" Height="30" Content="" FontFamily="{StaticResource font}" Visibility="{Binding EnableLocal, Converter={StaticResource BooleanToVisibilityConverter}}" Click="Button_Click_Get_Local" ToolTip="{DynamicResource LOCSuccessStoryGetMissingToolTip}"></Button>
+                            <Button Grid.Column="6" Grid.Row="10" Height="30" Content="{DynamicResource LOCSuccessStoryRefreshData}" Visibility="{Binding EnableLocal, Converter={StaticResource BooleanToVisibilityConverter}}" Click="Button_Click_Local" ToolTip="{DynamicResource LOCSuccessStoryRefreshDataToolTip}"></Button>
                         </Grid>
                     </DockPanel>
                 </ScrollViewer>
