arrangement of the list of achievements #86

--- a/Views/Interface/SuccessStoryAchievementsList.xaml
+++ b/Views/Interface/SuccessStoryAchievementsList.xaml
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:SuccessStory.Views.Interface"
              xmlns:converters="clr-namespace:CommonPlaynite.Converters;assembly=CommonPlaynite"
              xmlns:plugincommon="clr-namespace:PluginCommon;assembly=CommonControls"
-             mc:Ignorable="d">
+             xmlns:controls="clr-namespace:CommonPlaynite.Controls;assembly=CommonPlaynite"
+             mc:Ignorable="d" d:DesignWidth="200">
 
     <UserControl.Resources>
         <converters:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
@@ -71,19 +72,19 @@
 
         <ListBox.ItemsPanel>
             <ItemsPanelTemplate>
-                <UniformGrid Columns="{Binding ColDefinied}" />
+                <controls:VirtualizingGridPanel Columns="{Binding ColDefinied}" Rows="{Binding RowDefinied}" />
             </ItemsPanelTemplate>
         </ListBox.ItemsPanel>
 
         <ListBox.ItemTemplate>
             <DataTemplate>
-                <Grid Margin="0,5">
+                <Grid Margin="0,5" Height="65">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="58" />
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <StackPanel Grid.Column="0" Height="48" Width="48" HorizontalAlignment="Left"
+                    <StackPanel Grid.Column="0" Height="48" Width="48" VerticalAlignment="Top" Margin="0,5,0,0"
                                 Visibility="{Binding IsGray, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <Image Stretch="UniformToFill"
                                Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
@@ -103,30 +104,30 @@
                                 <ImageBrush ImageSource="{Binding IconImage, IsAsync=True}" />
                             </Image.OpacityMask>
                             <Image.Effect>
-                                <DropShadowEffect BlurRadius="30" ShadowDepth="0" Color="{Binding Percent, Converter={StaticResource SetColorConverter}}"/>
+                                <DropShadowEffect BlurRadius="15" ShadowDepth="0" Color="{Binding Percent, Converter={StaticResource SetColorConverter}}"/>
                             </Image.Effect>
                         </Image>
                     </StackPanel>
 
-                    <StackPanel Grid.Column="0" Height="48" Width="48" HorizontalAlignment="Left"
+                    <StackPanel Grid.Column="0" Height="48" Width="48" VerticalAlignment="Top" Margin="0,5,0,0"
                                 Visibility="{Binding IsGray, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
                         <Image Stretch="UniformToFill" Source="{Binding Icon}"
                                Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource InvertedBooleanToVisibilityConverter}}" />
                         <Image Stretch="UniformToFill" Source="{Binding Icon}" 
                                Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource BooleanToVisibilityConverter}}">
                             <Image.Effect>
-                                <DropShadowEffect BlurRadius="30" ShadowDepth="0" Color="{Binding Percent, Converter={StaticResource SetColorConverter}}"/>
+                                <DropShadowEffect BlurRadius="15" ShadowDepth="0" Color="{Binding Percent, Converter={StaticResource SetColorConverter}}"/>
                             </Image.Effect>
                         </Image>
                     </StackPanel>
 
-                    <Grid Grid.Column="1">
+                    <Grid Grid.Column="1" Margin="10,0,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
 
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
+                            <RowDefinition Height="auto" />
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
 
@@ -145,7 +146,8 @@
                             <TextBlock Grid.Column="1" TextAlignment="Right" Text="{Binding DateUnlock, Converter={StaticResource LocalDateTimeConverter}}"  Foreground="{DynamicResource TextBrush}" />
                         </Grid>
 
-                        <TextBlock Grid.Row="1" Text="{Binding Description}" TextWrapping="Wrap" Foreground="{DynamicResource TextBrushDarker}"/>
+                        <TextBlock Grid.Row="1" Text="{Binding Description}" VerticalAlignment="Top"
+                                   TextWrapping="Wrap" Foreground="{DynamicResource TextBrushDarker}" />
                     </Grid>
                 </Grid>
             </DataTemplate>
