--- a/Localization/LocSource.xaml
+++ b/Localization/LocSource.xaml
@@ -50,6 +50,7 @@
 
     <sys:String x:Key="LOCSuccessStoryIntegrationShowGraphic">Show chart</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievements">Show achievements list</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompact">Show achievements list compact</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowProgressBar">Show achievements progress bar</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactUnlocked">Show summary of unlocked achievements</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactLocked">Show summary of locked achievements</sys:String>
