--- a/Views/Interface/ScAchievementsListCompactVertical.xaml
+++ b/Views/Interface/ScAchievementsListCompactVertical.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="SuccessStory.Views.Interface.SuccessStoryAchievementsList"
+﻿<UserControl x:Class="SuccessStory.Views.Interface.ScAchievementsListCompactVertical"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SuccessStory.Views.Interface"
              xmlns:converters="clr-namespace:CommonPlaynite.Converters;assembly=CommonPlaynite"
-             xmlns:controls="clr-namespace:CommonPlaynite.Controls;assembly=CommonPlaynite"
              xmlns:plugincommon="clr-namespace:PluginCommon"
-             mc:Ignorable="d" d:DesignWidth="200">
+             xmlns:controls="clr-namespace:CommonPlaynite.Controls;assembly=CommonPlaynite"
+             mc:Ignorable="d" d:DesignHeight="100" d:DesignWidth="100">
 
     <UserControl.Resources>
         <converters:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
@@ -16,8 +16,8 @@
         <local:SetColorConverter x:Key="SetColorConverter" />
     </UserControl.Resources>
 
-    <ListBox x:Name="lbAchievements" Loaded="LbAchievements_Loaded" Height="100"
-                 ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto">
+    <ListBox Name="lbAchievements" Loaded="LbAchievements_Loaded" MaxWidth="80"
+             ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="auto">
 
         <!-- Force the style because HorizontalContentAlignment not work. -->
         <ListBox.ItemContainerStyle>
@@ -46,17 +46,17 @@
                             </Grid>
                             <ControlTemplate.Triggers>
                                 <Trigger Property="IsFocused" Value="True">
-                                    <Setter Property="Visibility" Value="Visible" TargetName="SelectedRectangle" />
+                                    <Setter Property="Visibility" Value="Hidden" TargetName="SelectedRectangle" />
                                 </Trigger>
                                 <Trigger Property="IsSelected" Value="true">
-                                    <Setter Property="Visibility" Value="Visible" TargetName="SelectedRectangle" />
+                                    <Setter Property="Visibility" Value="Hidden" TargetName="SelectedRectangle" />
                                 </Trigger>
                                 <MultiTrigger>
                                     <MultiTrigger.Conditions>
                                         <Condition Property="IsMouseOver" Value="True" />
                                         <Condition Property="Selector.IsSelected" Value="False" />
                                     </MultiTrigger.Conditions>
-                                    <Setter Property="Visibility" Value="Visible" TargetName="HoverRectangle" />
+                                    <Setter Property="Visibility" Value="Hidden" TargetName="HoverRectangle" />
                                 </MultiTrigger>
                             </ControlTemplate.Triggers>
                         </ControlTemplate>
@@ -72,19 +72,19 @@
 
         <ListBox.ItemsPanel>
             <ItemsPanelTemplate>
-                <controls:VirtualizingGridPanel Columns="{Binding ColDefinied}" Rows="{Binding RowDefinied}" />
+                <VirtualizingStackPanel Orientation="Vertical" />
             </ItemsPanelTemplate>
         </ListBox.ItemsPanel>
 
         <ListBox.ItemTemplate>
             <DataTemplate>
-                <Grid Margin="0,5" Height="65">
+                <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="58" />
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="48" />
                     </Grid.ColumnDefinitions>
 
-                    <StackPanel Grid.Column="0" Height="48" Width="48" VerticalAlignment="Top" Margin="0,5,0,0"
+                    <StackPanel Grid.Column="0" Height="48" Width="48" VerticalAlignment="center"
+                                ToolTip="{Binding NameWithDateUnlock}"
                                 Visibility="{Binding IsGray, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <Image Stretch="UniformToFill"
                                Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
@@ -109,9 +109,10 @@
                         </Image>
                     </StackPanel>
 
-                    <StackPanel Grid.Column="0" Height="48" Width="48" VerticalAlignment="Top" Margin="0,5,0,0"
+                    <StackPanel Grid.Column="0" Height="48" Width="48" VerticalAlignment="center"
+                                ToolTip="{Binding NameWithDateUnlock}"
                                 Visibility="{Binding IsGray, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
-                        <Image Stretch="UniformToFill" Source="{Binding Icon}"
+                        <Image Stretch="UniformToFill" Source="{Binding Icon}" 
                                Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource InvertedBooleanToVisibilityConverter}}" />
                         <Image Stretch="UniformToFill" Source="{Binding Icon}" 
                                Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource BooleanToVisibilityConverter}}">
@@ -120,35 +121,6 @@
                             </Image.Effect>
                         </Image>
                     </StackPanel>
-
-                    <Grid Grid.Column="1" Margin="10,0,0,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="auto" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-
-                        <Grid Grid.Row="0">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="130" />
-                            </Grid.ColumnDefinitions>
-
-                            <TextBlock Grid.Column="0" Text="{Binding Name}" Foreground="{DynamicResource TextBrush}" TextTrimming="CharacterEllipsis"
-                                           MouseEnter="TextBlock_MouseEnter">
-                                <TextBlock.ToolTip>
-                                    <ToolTip Content="{Binding Name}"></ToolTip>
-                                </TextBlock.ToolTip>
-                            </TextBlock>
-                            <TextBlock Grid.Column="1" TextAlignment="Right" Text="{Binding DateUnlock, Converter={StaticResource LocalDateTimeConverter}}"  Foreground="{DynamicResource TextBrush}" />
-                        </Grid>
-
-                        <TextBlock Grid.Row="1" Text="{Binding Description}" VerticalAlignment="Top"
-                                   TextWrapping="Wrap" Foreground="{DynamicResource TextBrushDarker}" />
-                    </Grid>
                 </Grid>
             </DataTemplate>
         </ListBox.ItemTemplate>
